re PR c/35437 (ICE with struct containing incomplete type)

gcc/

2008-10-08  Simon Martin  <simartin@users.sourceforge.net>

        PR c/35437
        * expr.c (count_type_elements): Handle ERROR_MARK.

gcc/testsuite/

2008-10-08  Simon Martin  <simartin@users.sourceforge.net>

        PR c/35437
        * gcc.dg/struct-parse-2.c: New test.
        * g++.dg/parse/struct-4.C: New test.

From-SVN: r140961